Changelog Notes:
Fix Ascetic burning food too fast.
Fix Zombification Cure not setting infection correctly.
Add Compatibility for Dynamic Traits
Bloody Crowbar uses correct weapon model
Alcoholic gets less fatigue from alcohol.
Update Expert/Student Driver functions
Remove Scrounger callout.
Add Sandbox options for Scrounger, Incomprehensive, and Vagabond.
Fix Paranoia triggering during sleep and too frequently.
Reorganize Sandbox Settings menu.
Disable Amputee trait if Amputation mod is installed.